works done needs checking

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -337,6 +337,7 @@
         <button id="studentInfoNav" class="button">Student Info</button>
         <button id="parentInfoNav" class="button">Parent Info</button>
         <button id="paymentNav" class="button">Payment</button>
+        <button id="actInvoiceNav" class="button">ACT Invoice</button>
     </section>
 
     <section>
