--- a/public/pricing.html
+++ b/public/pricing.html
@@ -244,6 +244,7 @@
         <div class="program classes open">
           <h2>Need the a quick boost on your score?</h2>
           <h4>Choose a class that helps you reach your goals</h4>
+          <p><span class="accent">Bundle and save!</span> Sign up for multiple classes and get 5% off your total for each additional class.</p>
 
           <input type="checkbox" id="paymentType_classes" class="payment-input" checked>
           <div class="payment-type">
@@ -253,57 +254,155 @@
           </div>
           
           <div class="plans">
-            <!-- Class 3 weeks -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $30">
+            <!-- English -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
               <div class="title">
-                <h3>3 weeks</h3>
-                <h4 class="recurring">$300</h4>
-                <p class="recurring">4 payments of $50 and a $100 deposit**</p>
-                <h4 class="one-time">$270</h4>
-                <p class="one-time">1 payment of $270 which includes a $90 deposit**</p>
+                <h3>English</h3>
+                <h4 class="recurring">$160</h4>
+                <p class="recurring">2 payments of $40 and a $80 deposit**</p>
+                <h4 class="one-time">$144</h4>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
-                <h5>12 hours</h5>
+                <h5>4 hours</h5>
               </div>
               <ul>
                 <li>Curriculum written by our ACT experts</li>
                 <li>All instructors have scored in the <strong>top 1%</strong> (34+)</li>
-                <li>1 full length ACT practice tests</li>
-                <li>8 section practice homeworks</li>
+                <li>Focus on one section at a time or work on multiple</li>
+                <li>4 section practice homeworks</li>
                 <li>Time management skills</li>
                 <li>Test tips and strategies</li>
               </ul>
+              <div class="length">
+                <h4>Schedule</h4>
+                <p>Monday and Wednesday at 1 pm</p>
+                <p>Tuesday and Thursday at 6 pm</p>
+              </div>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select" onclick="availableClassesCallback(0)">
+              <!-- <button class="select" onclick="availableClassesCallback(0)">
                 <p>Check Availability</p>
+              </button> -->
+              <button class="select">
+                <a href="tel:+13853000906">
+                  <p>Call to check availability</p>
+                  <p>(385) 300-0906</p>
+                </a>
               </button>
             </div>
 
-            <!-- Class 4 weeks -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $40">
+            <!--Math -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
               <div class="title">
-                <h3>4 weeks</h3>
-                <h4 class="recurring">$400</h4>
-                <p class="recurring">6 payments of $25 and a $100 deposit**</p>
-                <h4 class="one-time">$360</h4>
-                <p class="one-time">1 payment of $360 which includes a $90 deposit**</p>
+                <h3>Math</h3>
+                <h4 class="recurring">$160</h4>
+                <p class="recurring">2 payments of $40 and a $80 deposit**</p>
+                <h4 class="one-time">$144</h4>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
-                <h5>16 hours</h5>
+                <h5>4 hours</h5>
               </div>
               <ul>
                 <li>Curriculum written by our ACT experts</li>
                 <li>All instructors have scored in the <strong>top 1%</strong> (34+)</li>
-                <li>1 full length ACT practice tests</li>
-                <li>12 section practice homeworks</li>
+                <li>Focus on one section at a time or work on multiple</li>
+                <li>4 section practice homeworks</li>
                 <li>Time management skills</li>
                 <li>Test tips and strategies</li>
               </ul>
+              <div class="length">
+                <h4>Schedule</h4>
+                <p>Monday and Wednesday at 1 pm</p>
+                <p>Tuesday and Thursday at 6 pm</p>
+              </div>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select" onclick="availableClassesCallback(1)">
+              <!-- <button class="select" onclick="availableClassesCallback(0)">
                 <p>Check Availability</p>
+              </button> -->
+              <button class="select">
+                <a href="tel:+13853000906">
+                  <p>Call to check availability</p>
+                  <p>(385) 300-0906</p>
+                </a>
+              </button>
+            </div>
+
+            <!-- Reading -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+              <div class="title">
+                <h3>Reading</h3>
+                <h4 class="recurring">$160</h4>
+                <p class="recurring">2 payments of $40 and a $80 deposit**</p>
+                <h4 class="one-time">$144</h4>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
+              </div>
+              <div class="length">
+                <h4>ACT Class</h4>
+                <h5>4 hours</h5>
+              </div>
+              <ul>
+                <li>Curriculum written by our ACT experts</li>
+                <li>All instructors have scored in the <strong>top 1%</strong> (34+)</li>
+                <li>Focus on one section at a time or work on multiple</li>
+                <li>4 section practice homeworks</li>
+                <li>Time management skills</li>
+                <li>Test tips and strategies</li>
+              </ul>
+              <div class="length">
+                <h4>Schedule</h4>
+                <p>Monday and Wednesday at 6 pm</p>
+                <p>Tuesday and Thursday at 1 pm</p>
+              </div>
+              <h4 class="start">GET STARTED TODAY!</h4>
+              <!-- <button class="select" onclick="availableClassesCallback(0)">
+                <p>Check Availability</p>
+              </button> -->
+              <button class="select">
+                <a href="tel:+13853000906">
+                  <p>Call to check availability</p>
+                  <p>(385) 300-0906</p>
+                </a>
+              </button>
+            </div>
+
+            <!-- Science -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+              <div class="title">
+                <h3>Science</h3>
+                <h4 class="recurring">$160</h4>
+                <p class="recurring">2 payments of $40 and a $80 deposit**</p>
+                <h4 class="one-time">$144</h4>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
+              </div>
+              <div class="length">
+                <h4>ACT Class</h4>
+                <h5>4 hours</h5>
+              </div>
+              <ul>
+                <li>Curriculum written by our ACT experts</li>
+                <li>All instructors have scored in the <strong>top 1%</strong> (34+)</li>
+                <li>Focus on one section at a time or work on multiple</li>
+                <li>4 section practice homeworks</li>
+                <li>Time management skills</li>
+                <li>Test tips and strategies</li>
+              </ul>
+              <div class="length">
+                <h4>Schedule</h4>
+                <p>Monday and Wednesday at 6 pm</p>
+                <p>Tuesday and Thursday at 1 pm</p>
+              </div>
+              <h4 class="start">GET STARTED TODAY!</h4>
+              <!-- <button class="select" onclick="availableClassesCallback(0)">
+                <p>Check Availability</p>
+              </button> -->
+              <button class="select">
+                <a href="tel:+13853000906">
+                  <p>Call to check availability</p>
+                  <p>(385) 300-0906</p>
+                </a>
               </button>
             </div>
           </div>
@@ -325,7 +424,7 @@
               <label for="faq_1_classes" class="summary"><h3>When do the programs start?</h3></label>
               <div class="content">
                 <p>
-                  Our classes are ongoing and happen about twice a month. Check availability above to get a better idea of when the next classes are starting
+                  Our classes are ongoing and happen about twice a month. Call us to get a better idea of when the next classes are starting
                 </p>
               </div>
             </div>
@@ -334,7 +433,7 @@
               <label for="faq_2_classes" class="summary"><h3>How long are the classes?</h3></label>
               <div class="content">
                 <p>
-                  Every class is 2 hours long.
+                  Every class is 1 hour long.
                 </p>
               </div>
             </div>
@@ -435,8 +534,14 @@
                 <li>Test tips and strategies</li>
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select" onclick="availableStudyGroupsCallback(0)">
+              <!-- <button class="select" onclick="availableStudyGroupsCallback(0)">
                 <p>Check Availability</p>
+              </button> -->
+              <button class="select">
+                <a href="tel:+13853000906">
+                  <p>Call to check availability</p>
+                  <p>(385) 300-0906</p>
+                </a>
               </button>
             </div>
 
@@ -464,8 +569,14 @@
                 <li>Test tips and strategies</li>
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select" onclick="availableStudyGroupsCallback(1)">
+              <!-- <button class="select" onclick="availableStudyGroupsCallback(1)">
                 <p>Check Availability</p>
+              </button> -->
+              <button class="select">
+                <a href="tel:+13853000906">
+                  <p>Call to check availability</p>
+                  <p>(385) 300-0906</p>
+                </a>
               </button>
             </div>
           </div>
