--- a/public/team.html
+++ b/public/team.html
@@ -267,6 +267,21 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="Images/tutors/Isabelle-Bagley.jpg" alt="Avatar">
+            </div>
+            <div class="flip-card-back">
+              <h1>Isabelle Bagley</h1> 
+              <p>
+                I'm from Provo Utah, born and raised! I am currently attending the Utah Valley University studying English Education. 
+                After college I want to teach English as a foreign language in other countries. 
+                I love to travel, bake, and play video games!
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       
 
