a few more changes

--- a/public/new-act-invoice.html
+++ b/public/new-act-invoice.html
@@ -36,6 +36,9 @@
       <option value="" disabled selected>select a program</option>
       <option value="actClass">ACT Class</option>
       <option value="actStudyGroup">ACT Study Group</option>
+      <option value="actBasics">ACT Basics</option>
+      <option value="actGuided">ACT Guided</option>
+      <option value="subjectTutoring">Subject Tutoring</option>
     </select>
     <label>Events to included in the invoice</label>
     <div class="ui multiple selection dropdown" id="eventList">
