--- a/public/pricing.html
+++ b/public/pricing.html
@@ -533,6 +533,11 @@
                 <li>Time management skills</li>
                 <li>Test tips and strategies</li>
               </ul>
+              <div class="length">
+                <h4>Schedule</h4>
+                <p>Monday and Wednesday at 1 pm</p>
+                <p>Tuesday and Thursday at 6 pm</p>
+              </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <!-- <button class="select" onclick="availableStudyGroupsCallback(0)">
                 <p>Check Availability</p>
@@ -568,6 +573,11 @@
                 <li>Time management skills</li>
                 <li>Test tips and strategies</li>
               </ul>
+              <div class="length">
+                <h4>Schedule</h4>
+                <p>Monday and Wednesday at 6 pm</p>
+                <p>Tuesday and Thursday at 1 pm</p>
+              </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <!-- <button class="select" onclick="availableStudyGroupsCallback(1)">
                 <p>Check Availability</p>
