--- a/public/team.html
+++ b/public/team.html
@@ -107,6 +107,7 @@
         </p>
       </section>
 
+      <p class="hint">Tap on our tutors to read more about them</p>
       <div class="tutor-grid">
         <div class="flip-card">
           <div class="flip-card-inner">
