--- a/public/pricing.html
+++ b/public/pricing.html
@@ -242,7 +242,7 @@
 
         <!-- classes -->
         <div class="program classes open">
-          <h2>Need the a quick boost on your score?</h2>
+          <h2>Need a quick boost to your score?</h2>
           <h4>Choose a class that helps you reach your goals</h4>
           <p><span class="accent">Bundle and save!</span> Sign up for multiple classes and get 5% off your total for each additional class.</p>
 
