added in new banner

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -354,7 +354,8 @@
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
         <button class="button" onclick="window.location.href='../new-act-fundamentals.html'">New ACT Fundamentals</button>
-        <button class="button" onclick="window.location.href='../act-sign-up'">New ACT Basic/Guided</button>
+        <button class="button" onclick="window.location.href='../act-sign-up.html'">New ACT Basic/Guided</button>
+        <button class="button" onclick="window.location.href='../new-assignment.html'">New Assignment</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <!-- <button class="button" onclick="goToStaffRegistration()">Add Staff</button> -->
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
