--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -186,8 +186,8 @@
     </div>
 
     <div id = "lessonPopup" onmouseover = "openLessonPopup()" onmouseout = "closeLessonPopup()" class = 'input-column-center hidden'>
-        <button class = "squareButton green white" onclick = "submitLesson('mastered')">Mastered</button>
-        <button class = "squareButton yellow" onclick = "submitLesson('proficient')">Proficient</button>
+        <button class = "squareButton yellow" onclick = "submitLesson('proficient')">Taught</button>
+        <button class = "squareButton green white" onclick = "submitLesson('mastered')">Reviewed</button>
         <!-- <button class = "squareButton red white" onclick = "submitLesson('review')">Review</button> -->
         <button class = "squareButton" onclick = "submitLesson('remove')">Remove</button>
     </div>
