--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 
     <!-- start banner -->
     <div class="banner">
-      <p>Get started today and recieve your <strong>first lesson free!</strong> Click for details.</p>
+      <p>Get started with <strong>2 free</strong> ACT tests. Click for details.</p>
     </div>
     <div class="modal">
       <div class="modal-body">
@@ -98,11 +98,11 @@
             <path d="M10,10 L22,22 M22,10 L10,22"></path>
           </svg>
         </div>
-        <h1>First session <span class="accent">free!</span></h1>
-        <h2>up to a <span class="accent">$150</span> value</h2>
-        <p>When you sign up for one of our ACT programs.</p>
-        <p>Enter your email to get a promo code to use when scheduling your program.</p>
-        <input type="email" placeholder="tutoring@lyrn.com">
+        <h1>2 tests <span class="accent">free!</span></h1>
+        <h2>8 sections timed tests</h2>
+        <p>Use our custom test taker to practice before the test.</p>
+        <p>Enter your email so we can send you your custom link to take the tests.</p>
+        <input type="email" placeholder="email">
         <p class="error"></p>
         <button class="submit">Ready to Lyrn</button>
       </div>
@@ -172,7 +172,7 @@
         <div class="hero__intro">
           <h1>Simple Online Tutoring</h1>
           <h4>ACT Prep and Subject Tutoring with <a href="why.html">Adaptive Learning Intelligence</a></h4>
-          <div><a class="hero__button" href="pricing.html">Get 2 <b>FREE</b> ACT Practice Tests</a></div>
+          <div><a class="hero__button" href="pricing.html">Get 2 <b>FREE</b> hours of ACT Prep</a></div>
         </div>
         <!-- <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
